data/diff_tests/wasmtime/unreachable_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1757.wast
;; 8. **Test 8: Import Function with `unreachable` Inside a Block Structure**    - Description: Form an imported function that contains a `block` structure with nested standard instructions and a final `unreachable`. Call this function from the main module.    - Constraint Checked: Checks block structure integration across module calls with `unreachable`.    - Relation: Tests if control flow within structured blocks encounter and handle traps correctly across modules.

(assert_invalid
  (module
    (import "env" "test_func" (func))
    (func (call 0)
      (block
        (i32.const 1)
        (unreachable)
      )
    )
  )
  "type mismatch"
)